# AI_Test

./: README.md  pyproject.toml  setup.py
ai_advisor/: __init__.py  hooks.py  modules.txt
ai_advisor/ai_advisor/: __init__.py
ai_advisor/ai_advisor/ai_advisor_settings/: __init__.py  ai_advisor_settings.json
ai_advisor/ai_advisor/doctype/ai_advisor_settings/: ai_advisor_settings.json  ai_advisor_settings.py
ai_advisor/ai_advisor/page/ai_advisor/: ai_advisor.js  ai_advisor.json  ai_advisor.py
ai_advisor/api/: claude_api.py
